2003-03-28  Mark Page  <mpagenva@aol.com>

	* nsd/tclhttp.c: (bug) Fix uninitialized hdrs var, was causing segfault.

2003-03-21  Mark Page  <mpagenva@aol.com>

        * TAG aolserver_v4_r0_beta_4

2003-03-19  Mark Page  <mpagenva@aol.com>

        * nsd/tclhttp.c: Added method argument to ns_http queue api to
        allow sending POSTs as well as GETs.

2003-03-19  Mark Page  <mpagenva@aol.com>

        * nsext/nsext.c: Change back to using ns_socketpair for local
        proxies, to retain PEEK functionality.

2003-03-19  Zoran Vasiljevic <zoran@archiware.com>

	* nsd/modload.c: added fallback for loading regular
	shared libraries in addition to bundles on Darwin.

	* include/tcl.h: added set of version macros
	* nsd/config.c: added Ns_GetVersion API call.

2003-03-10  Scott S. Goodwin  <scott@scottg.net>

	* nscgi/nscgi.c: (bug) SERVER_NAME is now set correctly.

2003-03-10  Mark Page  <mpagenva@aol.com>

	* nsd/sched.c: (bug) Fix problem with shutting down event threads
	(these service detachted thread processing) on a server shutdown.

2003-03-07  Nathan Folkman <shmooved@aol.com>

        * TAG aolserver_v4_r0_beta_3

2003-03-07  Zoran Vasiljevic <zoran@archiware.com>

	* include/ns.h:
	* nscgi/nscgi.c:
	* nscp/nscp.c:
	* nsd/adpeval.c:
	* nsd/adpparse.c:
	* nsd/binder.c:
	* nsd/config.c:
	* nsd/conn.c:
	* nsd/connio.c:
	* nsd/dns.c:
	* nsd/driver.c:
	* nsd/dstring.c:
	* nsd/encoding.c:
	* nsd/fastpath.c:
	* nsd/index.c:
	* nsd/info.c:
	* nsd/lisp.c:
	* nsd/listen.c:
	* nsd/log.c:
	* nsd/modload.c:
	* nsd/nsmain.c:
	* nsd/pidfile.c:
	* nsd/queue.c:
	* nsd/request.c:
	* nsd/rollfile.c:
	* nsd/sched.c:
	* nsd/sockcallback.c:
	* nsd/tclatclose.c:
	* nsd/tclfile.c:
	* nsd/tclhttp.c:
	* nsd/tclimg.c:
	* nsd/tclinit.c:
	* nsd/tcljob.c:
	* nsd/tclmisc.c:
	* nsd/tclshare.c:
	* nsd/tclsock.c:
	* nsd/tclvar.c:
	* nsd/tclxkeylist.c:
	* nsd/urlencode.c:
	* nsd/urlspace.c:
	* nsdb/dbinit.c:
	* nsdb/dbtcl.c:
	* nsext/nsext.c:
	* nslog/nslog.c:
	* nspd/log.c: